apps/web/50.Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: web
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: web
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
        app.kubernetes.io/name: web
    spec:
      volumes:
        - name: run-storage
          emptyDir: {}
        - name: config
          configMap:
            name: web-config
            items:
              - key: web.json
                path: web.json
      containers:
        - name: web
          image: registry.ubuntu.home/alpine/web:c8277bb990
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: run-storage
              mountPath: /var/run
            - name: config
              mountPath: /app/web.json
              subPath: web.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: web
      serviceAccount: web
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
